[gd_scene load_steps=2 format=3 uid="uid://b0xsa1tyjv7v4"]

[ext_resource type="Script" path="res://cenas/groupAliens.gd" id="1_6a5fi"]

[node name="groupAliens" type="Node"]
script = ExtResource("1_6a5fi")

[node name="TimerDescida" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="TimerDisparar" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="TimerDescida" to="." method="_on_timer_descida_timeout"]
[connection signal="timeout" from="TimerDisparar" to="." method="_on_timer_disparar_timeout"]
